Fix Experience being too wide

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -193,7 +193,6 @@ p, h1, h2, .arrow {
 
 .location {
   width: 50%;
-  min-width: 300px;
   max-width: 400px;
 }
 
